Apply suggestions from code review
Co-authored-by: Marc R. Hoffmann <hoffmann@mountainminds.com>